Bug 1584691 - Reinstate support for scrollbar layers that are descendants of the scrolled content. r=tnikkel

This layer structure can still occur in cases where we place the RCD-RSF
scroll metadata on the root layer as a fallback.

Differential Revision: https://phabricator.services.mozilla.com/D47655