gfx/layers/apz/src/HitTestingTreeNode.h
@@ -90,6 +90,8 @@ class HitTestingTreeNode {
   HitTestingTreeNode* GetPrevSibling() const;
   HitTestingTreeNode* GetParent() const;
 
+  bool IsAncestorOf(const HitTestingTreeNode* aOther) const;
+
   /* APZC related methods */
 
   AsyncPanZoomController* GetApzc() const;
